feat(auth): view authorization
PolicyConfig - Privileges organized by API Group and Operation
AuthUtils/AuthenticationUtil/ControllerUtil/ResourceUtils - consolidated into AuthUtil
Added EXISTS_ENTIY privilege
Added CREATE_ENTITY privilege (CreateIfEntityNotExistsValidator)
Added CreateIfEntityNotExists flag to OpenAPI create endpoints
Deprecated SEARCH privilege
Entity Indices systemCreated timestamp
Fix cache key calculation
Fix search view privileges inheritance
Fix MeResolver for viewing self